--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@clerk/nextjs": "^6.12.7",
     "@neondatabase/serverless": "^0.10.4",
     "@tabler/icons-react": "^3.31.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.483.0",
